# dfxm-bv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: README.md
notebooks/00_tests/: module_import_smoke_test.ipynb
notebooks/01_training/: cc_reflection_training_cases.ipynb  crystallographic_resnet_models.ipynb  crystallographic_resnet_visualize.ipynb  uncertainty_predictive_entropy_mi.ipynb
notebooks/02_experimental/: edf_layer_slider_roi_background_workflow.ipynb  evaluate_extracted_experimental_layers.ipynb  experimental_rocking_curve_with_insets.ipynb  fixed_roi_scalebar_and_integration.ipynb  predict_burgers_experimental_111.ipynb  roi_mean_correct_integrate_and_video_workflow.ipynb
notebooks/03_visualization/: dislocation_3d_point_segmentation_workflow.ipynb  plot_saved_dislocation_roi_scalebar.ipynb  saved_roi_crops_no_transpose_scalebar.ipynb
notebooks/workflows/: 01_compare_data_driven_vs_crystallographic.ipynb  02_uncertainty_entropy_mutual_information.ipynb  03_experimental_visualization_and_cropping.ipynb  04_test_models_on_experimental_data.ipynb  README.md
scripts/: check_environment.py
src/bv_repro/: __init__.py  bbox_segmentation_video_tools.py  benchmark_visualization.py  crystallographic_benchmark.py  data.py  dislocation_point_tools.py  edf_rocking_roi.py  models.py  preprocessing.py  training.py  visualization.py
