[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfxm-bv"
version = "0.1.0"
description = "DFXM Burgers-vector classification and crystallographic-constrained learning workflows."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "torch",
  "torchvision",
]

[tool.setuptools.packages.find]
where = ["src"]


